# gymnasium-rs

./: Cargo.toml  README.md  Trunk.ghpages.toml  Trunk.toml  index.html  package.json
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  state.rs
src/components/: chart.rs  dock.rs  exercise_card.rs  icons.rs  keypad.rs  mod.rs  modals.rs  set_row.rs  toast.rs  ui.rs
src/pages/: calendar.rs  history.rs  home.rs  mod.rs  settings.rs  trenino.rs  workout.rs
style/: input.css
