[package]
name = "gymnasium-rs"
version = "0.1.0"
edition = "2024"

[features]
gh-pages = []

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-storage = "0.3"
gloo-file = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlElement",
    "HtmlDialogElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Blob",
    "Url",
    "File",
    "FileList",
] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
